# PrePars

./: .gitignore  .readthedocs.yml  Makefile  README.md  README.rst  download.sh  normalizer.py  pyproject.toml  regexer.py  requirements.txt  setup.py  spacing.py  verb.py
.github/workflows/: codeql-analysis.yml  publish-package-test.yml  publish-package.yml  pytest.yml
PVC/Data/TXT/: prefix.txt  replacement.json  suffix.csv
docs/: Makefile  conf.py
docs/source/: conf.py  index.rst  modules.rst  prepars.rst  usage.rst
src/prePars/: index.py  normalizer.py  regexer.py  spacing.py
src/prepars/: normalizer.py  regexer.py  spacing.py  verb.py
src/prepars/PVC/Data/TXT/: suffix.csv
tests/: test_normalizer.py  test_spacing.py  test_verb.py
